Fix FAB z-indexes

--- a/src/style/shared.less
+++ b/src/style/shared.less
@@ -44,7 +44,7 @@ hr {
     position: absolute;
     top: 180px;
     left: 285px;
-    z-index: 100;
+    z-index: 60;
 }
 
 // Create, user form
